# m_threads

./: .gitignore  CMakeLists.txt  main.cpp  threads1.cpp
mt1/: threads1.cpp
mt3/: floid.cpp
mt4/: BSP.h  BSPJson.cpp  BSPJson.h  bsp.cpp  slicer.py
mt4/1test/: s_20_22-01-56.json
mt4/dbg/: 20_03-51-05.json  srabotalo_na_etmo13.json
mt4/gens/: 1.json  20_02-00-47.json  20_03-05-10.json  20_03-47-57.json  20_04-08-36.json  20_04-08-42.json  now20_19-28-12.json
mt4/segmets_from_imgs/: barn-owl-1107397_1920.json
mt4/trees/: t_20_16-33-06.json  t_20_19-18-08.json  t_20_19-28-12.json
mt4/vis/: azino777.py  label_lines.py  plot.py  tree_.py  viz_segments_.py  viz_tree.py
mt6/: f_gen.py  text_search.py
pdfs/: Laboratornaya_nomer_1_2_Osnovy_raboty_s_potokami_izuchenie_metodov_sinkhronizatsii.docx  Laboratornaya_nomer_3_4_Rabota_s_openmp.docx  Laboratornaya_nomer_5_Rabota_s_potokami_v_NET.docx  Laboratornaya_nomer_6_7_Rasparallelivanie_v_Python.docx  ~$boratornaya_nomer_3_4_Rabota_s_openmp.docx
tests/: 2024-05-16_23-30-55.txt  2024-05-17_00-21-12.txt  2024-05-18_01-41-20.txt  2024-05-18_01-41-52.txt  2024-05-18_01-42-25.txt  2024-05-18_01-42-44.txt  2024-05-19_02-44-45.txt  floid_2024-05-17_03-16-26.txt  floid_2024-05-21_02-21-28.txt  mt1_tests.txt  mt1_tests2.txt  mt1_tests3.txt
visual/: cringe.py  floid_.py  graf.py  t1_graphics.py
